Tweak the deregistration delay on the ALB target group to get faster deploys with CodeDeploy

--- a/resources/product-service.yml
+++ b/resources/product-service.yml
@@ -338,6 +338,9 @@ Resources:
       HealthCheckTimeoutSeconds: 5
       HealthyThresholdCount: 2
       UnhealthyThresholdCount: 2
+      TargetGroupAttributes:
+        - Key: deregistration_delay.timeout_seconds
+          Value: 10
       Port: 80
       Protocol: HTTP
       TargetType: ip
