--- a/resources/order-service.yml
+++ b/resources/order-service.yml
@@ -20,6 +20,9 @@ Parameters:
   LambdaCodeBuildStartBuildArn:
     Description: The Lambda function ARN to start a CodeBuild project
     Type: String
+  LambdaClearEcrImagesArn:
+    Description: The Lambda function ARN to delete the ECR images
+    Type: String
   VPC:
     Description: The SaaS Bootcamp VPC
     Type: String
@@ -59,18 +62,23 @@ Resources:
       - AttributeName: orderId
         KeyType: RANGE
       ProvisionedThroughput:
-        ReadCapacityUnits: '10'
-        WriteCapacityUnits: '10'
-      TableName: 'OrderBootcamp'
+        ReadCapacityUnits: 5
+        WriteCapacityUnits: 5
+      TableName: OrderBootcamp
   ECSRepository:
     Type: AWS::ECR::Repository
     Properties:
       RepositoryName: saas-bootcamp/order-manager
+  InvokeClearEcrRepoImages:
+    Type: Custom::CustomResource
+    Properties:
+      ServiceToken: !Ref LambdaClearEcrImagesArn
+      Repository: !Ref ECSRepository
   CodeBuildLogs:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupName: '/aws/codebuild/saas-bootcamp-order-svc'
-      RetentionInDays: 14
+      RetentionInDays: 7
   CodeBuildProject:
     Type: AWS::CodeBuild::Project
     Properties:
@@ -237,7 +245,7 @@ Resources:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupName: '/ecs/saas-bootcamp-order-svc'
-      RetentionInDays: 14
+      RetentionInDays: 7
   ECSTaskRole:
     Type: AWS::IAM::Role
     Properties:
@@ -312,6 +320,9 @@ Resources:
       HealthCheckTimeoutSeconds: 5
       HealthyThresholdCount: 2
       UnhealthyThresholdCount: 2
+      TargetGroupAttributes:
+        - Key: deregistration_delay.timeout_seconds
+          Value: 10
       Port: 80
       Protocol: HTTP
       TargetType: ip
