--- a/resources/product-service.yml
+++ b/resources/product-service.yml
@@ -20,6 +20,9 @@ Parameters:
   LambdaCodeBuildStartBuildArn:
     Description: The Lambda function ARN to start a CodeBuild project
     Type: String
+  LambdaClearEcrImagesArn:
+    Description: The Lambda function ARN to delete the ECR images
+    Type: String
   VPC:
     Description: The SaaS Bootcamp VPC
     Type: String
@@ -49,11 +52,16 @@ Resources:
     Type: AWS::ECR::Repository
     Properties:
       RepositoryName: saas-bootcamp/product-manager
+  InvokeClearEcrRepoImages:
+    Type: Custom::CustomResource
+    Properties:
+      ServiceToken: !Ref LambdaClearEcrImagesArn
+      Repository: !Ref ECSRepository
   CodeBuildLogs:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupName: '/aws/codebuild/saas-bootcamp-product-svc'
-      RetentionInDays: 14
+      RetentionInDays: 7
   CodeBuildProject:
     Type: AWS::CodeBuild::Project
     Properties:
@@ -263,7 +271,7 @@ Resources:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupName: '/ecs/saas-bootcamp-product-svc'
-      RetentionInDays: 14
+      RetentionInDays: 7
   ECSTaskRole:
     Type: AWS::IAM::Role
     Properties:
@@ -378,13 +386,15 @@ Resources:
         - ContainerName: product-manager
           ContainerPort: 3006
           TargetGroupArn: !Ref ALBTargetGroup
-  InvokeLambdaCodeBuildStartBuild:
-    Type: Custom::CustomResource
-    DependsOn:
-      - CodeBuildProject
-      - CodePipeline
-      - CloudWatchEventRuleForCodePipeline
-    Properties:
-      ServiceToken: !Ref LambdaCodeBuildStartBuildArn
-      Project: saas-bootcamp-product-svc
+# Don't deploy the product service or make the product service DynamoDB table
+# now. Let the attendee do it as part of Lab2.
+#  InvokeLambdaCodeBuildStartBuild:
+#    Type: Custom::CustomResource
+#    DependsOn:
+#      - CodeBuildProject
+#      - CodePipeline
+#      - CloudWatchEventRuleForCodePipeline
+#    Properties:
+#      ServiceToken: !Ref LambdaCodeBuildStartBuildArn
+#      Project: saas-bootcamp-product-svc
 ...
