--- a/resources/user-service.yml
+++ b/resources/user-service.yml
@@ -20,6 +20,9 @@ Parameters:
   LambdaCodeBuildStartBuildArn:
     Description: The Lambda function ARN to start a CodeBuild project
     Type: String
+  LambdaClearEcrImagesArn:
+    Description: The Lambda function ARN to delete the ECR images
+    Type: String
   VPC:
     Description: The SaaS Bootcamp VPC
     Type: String
@@ -51,17 +54,17 @@ Resources:
       AttributeDefinitions:
       - AttributeName: tenant_id
         AttributeType: S
-      - AttributeName: id
+      - AttributeName: user_id
         AttributeType: S
       KeySchema:
       - AttributeName: tenant_id
         KeyType: HASH
-      - AttributeName: id
+      - AttributeName: user_id
         KeyType: RANGE
       ProvisionedThroughput:
-        ReadCapacityUnits: '10'
-        WriteCapacityUnits: '10'
-      TableName: 'UserBootcamp'
+        ReadCapacityUnits: 5
+        WriteCapacityUnits: 5
+      TableName: UserBootcamp
       GlobalSecondaryIndexes:
       - IndexName: UserNameIndex
         KeySchema:
@@ -70,17 +73,22 @@ Resources:
         Projection:
           ProjectionType: ALL
         ProvisionedThroughput:
-          ReadCapacityUnits: '10'
-          WriteCapacityUnits: '10'
+          ReadCapacityUnits: 5
+          WriteCapacityUnits: 5
   ECSRepository:
     Type: AWS::ECR::Repository
     Properties:
       RepositoryName: saas-bootcamp/user-manager
+  InvokeClearEcrRepoImages:
+    Type: Custom::CustomResource
+    Properties:
+      ServiceToken: !Ref LambdaClearEcrImagesArn
+      Repository: !Ref ECSRepository
   CodeBuildLogs:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupName: '/aws/codebuild/saas-bootcamp-user-svc'
-      RetentionInDays: 14
+      RetentionInDays: 7
   CodeBuildProject:
     Type: AWS::CodeBuild::Project
     Properties:
@@ -247,7 +255,7 @@ Resources:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupName: '/ecs/saas-bootcamp-user-svc'
-      RetentionInDays: 14
+      RetentionInDays: 7
   ECSTaskRole:
     Type: AWS::IAM::Role
     Properties:
@@ -350,6 +358,9 @@ Resources:
       HealthCheckTimeoutSeconds: 5
       HealthyThresholdCount: 2
       UnhealthyThresholdCount: 2
+      TargetGroupAttributes:
+        - Key: deregistration_delay.timeout_seconds
+          Value: 10
       Port: 80
       Protocol: HTTP
       TargetType: ip
