Updating the GSI for the UserBootcamp DDB table to reference the right attribute name

--- a/resources/user-service.yml
+++ b/resources/user-service.yml
@@ -68,7 +68,7 @@ Resources:
       GlobalSecondaryIndexes:
       - IndexName: UserNameIndex
         KeySchema:
-        - AttributeName: id
+        - AttributeName: user_id
           KeyType: HASH
         Projection:
           ProjectionType: ALL
